add_definitions(-std=c++11)
find_package(Boost 1.54.0 COMPONENTS system filesystem REQUIRED)
find_package(Threads)
include_directories(${Boost_INCLUDE_DIRS})
#file( GLOB SRCS *.cpp *.hpp )
add_executable(Client Client.cpp)
target_link_libraries(Client ${Boost_LIBRARIES})
target_link_libraries(Client ${CMAKE_THREAD_LIBS_INIT})
