enable_testing()
find_package(GTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})
add_executable(runTests ClientTests.cpp server.cpp)
target_link_libraries(runTests SH)
target_link_libraries(runTests ${Boost_LIBRARIES})
target_link_libraries(runTests ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(runTests ${GTEST_LIBRARIES} pthread)
